# utility

./: .gitignore  CMakeLists.txt  README.md  make.sh
cmake/Modules/: firmware.cmake  freertos.cmake  gtest.cmake  init.cmake  project_download.cmake.in  project_setup.cmake  stm32f103c8t6.cmake  unit_testing.cmake
include/: buff.h  buff.hpp  misc.hpp  serial_io.hpp  sorters.hpp  test_helpers.hpp  value_codec.hpp  value_tracker.h  value_tracker.hpp  wheel_encoder.hpp
include/drivers/: vnh5019_driver.hpp
include/utility/: avl_tree.hpp  buff.hpp  defines.hpp  misc.hpp  pseudo_tty.hpp  serial_io_boost.hpp  serial_io_termios.hpp  shared_ptr.hpp  sorters.hpp  spin_lock.hpp  test_helpers.hpp  value_codec.hpp  value_tracker.hpp  wheel_encoder.hpp
include/utility/avr/: i2c_avr_hal.hpp  i2c_hal.hpp  pwm_motor_3wire.hpp  tcrt5000.hpp
include/utility/common/: avl_tree.hpp  defines.hpp  i2c.hpp  maxsonar_lvez.hpp  pwm_motor.hpp  shared_ptr.hpp  spin_lock.hpp  test_helpers.hpp  time.hpp  usart.hpp  value_codec.hpp  value_tracker.hpp  vex_motor_encoder.hpp  vl53l0x.hpp  wheel_encoder.hpp
include/utility/esp32/: i2c_esp32_hal.hpp  i2c_hal.hpp
include/utility/stm32/: i2c_hal.hpp  pwm_motor_2wire.hpp  pwm_motor_3wire.hpp  usb.hpp
include/utility/x86/: pseudo_tty.hpp  serial_io_boost.hpp  serial_io_termios.hpp  usart_termios.hpp
src/: CMakeLists.txt  buff.cpp  main.cpp  misc.cpp  pseudo_tty.cpp  serial_io_boost.cpp  serial_io_termios.cpp  sorters.cpp  test_helpers.cpp  value_codec.cpp
src/ard/: CMakeLists.txt
src/avr/: CMakeLists.txt  i2c_avr_hal.cpp  i2c_hal.cpp  time.cpp  usart.cpp  usart_avr_hal.cpp  usart_avr_hal.hpp
src/common/: defines.cpp  i2c.cpp  value_codec.cpp  vex_motor_encoder.cpp  vl53l0x.cpp
src/esp32/: CMakeLists.txt  i2c_esp32_hal.cpp  i2c_hal.cpp  time.cpp
src/stm32/: CMakeLists.txt  FreeRTOSConfig.h  i2c_hal.cpp  i2c_stm32_hal.cpp  i2c_stm32_hal.hpp  stm32f103c8t6.ld  time.cpp  usart.cpp  usart_stm32_hal.cpp  usart_stm32_hal.hpp  usb.cpp
src/test/: CMakeLists.txt  CMakeListsGTest.txt  buff_test.cpp  value_codec_test.cpp  value_tracker_test.cpp
src/utility/: sorters_impl.hpp
src/x86/: CMakeLists.txt  serial_io_boost.cpp  serial_io_termios.cpp  usart.cpp  usart_termios.cpp  usart_x86_hal.cpp  usart_x86_hal.hpp
test/: CMakeLists.txt  avl_tree_test.cpp  buff_test.cpp  defines_test.cpp  gtest-download.cmake  gtest.cmake  main.cpp  maxsonar_lvez_test.cpp  misc_test.cpp  serial_io_boost_test.cpp  serial_io_termios_test.cpp  serial_io_test.cpp  shared_ptr_test.cpp  sorters_test.cpp  usart_termios_test.cpp  usart_test.cpp  value_codec_test.cpp  value_tracker_test.cpp  wheel_encoder_test.cpp
test/x86/: serial_io_boost_test.cpp  serial_io_termios_test.cpp
